Prepare for release

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
-behave-html-pretty-formatter 0.0
+behave-html-pretty-formatter 1.0
 ================================
-Initial commit of behave-html-pretty-procedures.
+Initial commit.
 Prepare for pip.
 Improve the project.
