--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+
+behave-html-pretty-formatter 1.1
+================================
+Change readme to LIVE
+
 behave-html-pretty-formatter 1.0
 ================================
 Initial commit.
