--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+behave-html-pretty-formatter 1.2
+================================
+Change background color of scenario.
 
 behave-html-pretty-formatter 1.1
 ================================
