--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+behave-html-pretty-formatter 1.3
+================================
+Add additional info in summarry.
+
 behave-html-pretty-formatter 1.2
 ================================
 Change background color of scenario.
