Update metadata to 1.5

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+
+behave-html-pretty-formatter 1.5
+================================
+Disable embeds download #23
+Adding Feature Commentary #25
+
 behave-html-pretty-formatter 1.4
 ================================
 Format the summary.
