--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+behave-html-pretty-formatter 1.7
+================================
+Generate report even if exited with sys.exit()
+
 behave-html-pretty-formatter 1.6
 ================================
 Updating README with new image/gif examples reflecting current design.
