--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+behave-html-pretty-formatter 1.8
+================================
+Use Status object instead of strings - Fixing Issue #37
+
 behave-html-pretty-formatter 1.7
 ================================
 Generate report even if exited with sys.exit()
