Improvements to the feature started data
Release 1.9.1: hotfix invalid minified JS

The following code
```
}
else {
```
is being minified to invalid JS:
```
};else{
```
We should investigate why and maybe add
some check or use different minifier.

Bump version, add changes entry

Release 1.9.1: hotfix invalid minified JS

The following code
```
}
else {
```
is being minified to invalid JS:
```
};else{
```
We should investigate why and maybe add
some check or use different minifier.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.9.2
+==================================
+Replace invalid data when embeding text files. Fixes #42
+Summary timestamps: show one of them always. Fixes #45
+
 behave-html-pretty-formatter 1.9.1
 ==================================
 Hotfix invalid minified JS
