--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.10.3
+===================================
+Dummy hotfix for dependency issue introduced by dominate 2.9.1 version.
+
+
 behave-html-pretty-formatter 1.10.2
 ===================================
 Enabling option to hide auto-retry runs. Fixes #63
