--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.12.1
+===================================
+Add support for new statuses from upstream behave 1.2.7
+
+
 behave-html-pretty-formatter 1.12
 =================================
 Add add_html_header_element() call to add custom HTML header.
