--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 behave-html-pretty-formatter 1.12.1
 ===================================
 Add support for new statuses from upstream behave 1.2.7
+Fix rare embed UUID collision
 
 
 behave-html-pretty-formatter 1.12
