--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.12.3
+===================================
+Adding color scheme of results from Summary to Global Summary, based on Issue #82
+
+
 behave-html-pretty-formatter 1.12.2
 ===================================
 Fix download of HTML embeds, add `Download Plaintext` button
