--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.12.4
+===================================
+Fixing Issue #84
+
+
 behave-html-pretty-formatter 1.12.3
 ===================================
 Adding color scheme of results from Summary to Global Summary, based on Issue #82
