--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.12.5
+===================================
+Fixing Issue #86
+
+
 behave-html-pretty-formatter 1.12.4
 ===================================
 Fixing Issue #84
