Improve line in CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 behave-html-pretty-formatter 1.13
 =================================
-Adding Filtering Options to Summary and Global Summary.
+Adding Filtering Options to Feature's Summary and Global Summary.
 
 
 behave-html-pretty-formatter 1.12.7
