--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+behave-html-pretty-formatter 1.14
+=================================
+Adding Return to the Top button.
+Simplifying contrast switching. Fixing Issue #32
+
+
 behave-html-pretty-formatter 1.13
 =================================
 Adding Filtering Options to Feature's Summary and Global Summary.
@@ -5,7 +11,7 @@ Adding Filtering Options to Feature's Summary and Global Summary.
 
 behave-html-pretty-formatter 1.12.7
 ===================================
-Fix hook_error status of step not embeddng exception.
+Fix hook_error status of step not embedding exception.
 
 
 behave-html-pretty-formatter 1.12.6
@@ -98,7 +104,7 @@ Support embed filename change
 
 behave-html-pretty-formatter 1.9.2
 ==================================
-Replace invalid data when embeding text files. Fixes #42
+Replace invalid data when embedding text files. Fixes #42
 Summary timestamps: show one of them always. Fixes #45
 
 
@@ -160,7 +166,7 @@ Support HTML and markdown mime type in embed.
 
 behave-html-pretty-formatter 1.3
 ================================
-Add additional info in summarry.
+Add additional info in summary.
 
 
 behave-html-pretty-formatter 1.2
