Fixing fonts, previous configuration put the text off-center

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.14.1
+===================================
+Hotfix - font off-center, switching sans-serif to the front.
+
+
 behave-html-pretty-formatter 1.14
 =================================
 Adding Return to the Top button.
