--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.14.2
+===================================
+Fixing behave to version 1.2.6 before we can fix issues.
+
+
 behave-html-pretty-formatter 1.14.1
 ===================================
 Hotfix - font off-center, switching sans-serif to the front.
