--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 behave-html-pretty-formatter 1.14.2
 ===================================
+Respect encoding inherited from behave.
 Fixing behave to version 1.2.6 before we can fix issues.
 
 
