--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+behave-html-pretty-formatter 1.15
+=================================
+Fix behave version to 1.3.0.
+Fix before scenario step handling (new behave calls methods in reverse).
+Add default background to unhandled scenario status.
+
+
 behave-html-pretty-formatter 1.14.2
 ===================================
 Respect encoding inherited from behave.
