--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ behave-html-pretty-formatter 1.15
 Fix behave version to 1.3.0.
 Fix before scenario step handling (new behave calls methods in reverse).
 Add default background to unhandled scenario status.
+Support late registration of formatter in before_scenario
+Fix dependency on external tools in tests
 
 
 behave-html-pretty-formatter 1.14.2
