--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+behave-html-pretty-formatter 1.15.1
+===================================
+Fix not embedding error message if step is Status.error.
+
+
 behave-html-pretty-formatter 1.15
 =================================
 Fix behave version to 1.3.0.
